--- a/.github/workflows/build-apk-zipxtract.yml
+++ b/.github/workflows/build-apk-zipxtract.yml
@@ -84,6 +84,7 @@ jobs:
         run: |
           echo "Building PS release..."
           chmod +x ./gradlew
+          ./gradlew clean
           ./gradlew assemblePsRelease
 
       - name: Find release apks
