--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -11,14 +11,6 @@ on:
         options:
           - 'true'
           - 'false'
-      force_clean_build:
-        description: '是否强制清理缓存（忽略增量构建）'
-        type: choice
-        required: false
-        default: 'false'
-        options:
-          - 'true'
-          - 'false'
   workflow_call:
     inputs:
       incremental_build:
@@ -26,11 +18,6 @@ on:
         type: string
         required: false
         default: 'true'
-      force_clean_build:
-        description: '是否强制清理缓存'
-        type: string
-        required: false
-        default: 'false'
 
 env:
   JDK_VERSION: '21'
@@ -41,22 +28,13 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Show build configuration
         run: |
           echo "=== 构建配置 ==="
           echo "增量构建模式: ${{ inputs.incremental_build }}"
-          echo "强制清理缓存: ${{ inputs.force_clean_build }}"
           echo "Runner: ${{ runner.os }}"
-
-      # 条件性清理：仅在强制清理时执行
-      - name: Conditional clean runner environment
-        if: ${{ inputs.force_clean_build == 'true' || inputs.incremental_build == 'false' }}
-        run: |
-          echo "⚠️ 强制清理缓存，增量构建将失效"
-          rm -rf ~/.gradle/caches/transforms-*
-          rm -rf ~/.android/build-cache/
-          echo "缓存已清理"
 
       # 检出ci仓库
       - name: Checkout ci source repo (self)
@@ -85,19 +63,18 @@ jobs:
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          echo "INCREMENTAL_BUILD=${{ inputs.incremental_build }}" >> $GITHUB_ENV
-          echo "FORCE_CLEAN=${{ inputs.force_clean_build }}" >> $GITHUB_ENV
+          echo "INCREMENTAL_BUILD_MODE=${{ inputs.incremental_build }}" >> $GITHUB_ENV
 
-      # 先运行customize脚本，然后计算哈希
+      # 先运行customize脚本
       - name: Customize scripts
         run: |
           echo "=== 运行customize脚本 ==="
           chmod +x $GITHUB_WORKSPACE/ci_source/scripts/customize-bv-fantasy.sh
           $GITHUB_WORKSPACE/ci_source/scripts/customize-bv-fantasy.sh
 
-      # 恢复Gradle缓存（条件性）
+      # 恢复Gradle缓存（仅增量构建模式）
       - name: Restore Gradle cache
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' }}
+        if: ${{ inputs.incremental_build == 'true' }}
         uses: actions/cache@main
         id: gradle-cache
         with:
@@ -105,15 +82,14 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             fantasy-bv-source/.gradle
-            fantasy-bv-source/build-cache
-            fantasy-bv-source/build
+            fantasy-bv-source/.gradle-build-cache
           key: ${{ runner.os }}-gradle-cache-${{ hashFiles('fantasy-bv-source/gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-cache-
 
-      # 恢复源代码哈希缓存（条件性）
+      # 恢复源代码哈希缓存（仅增量构建模式）
       - name: Restore source hash cache
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' }}
+        if: ${{ inputs.incremental_build == 'true' }}
         uses: actions/cache@main
         id: source-hash-cache
         with:
@@ -127,7 +103,9 @@ jobs:
         run: |
           echo "=== 从 bv-libs Monorepo 复制各子库 ==="
           cd fantasy-bv-source
+          
           mkdir -p libs
+          
           declare -A LIB_PATHS
           LIB_PATHS=(
             ["akDanmaku"]="akDanmaku"
@@ -136,27 +114,56 @@ jobs:
             ["libVLC"]="libVLC"
             ["media3Container"]="media3Container"
           )
+          
           for LIB_NAME in "${!LIB_PATHS[@]}"; do
             SRC_PATH="../bv-libs-source/${LIB_PATHS[$LIB_NAME]}"
             DEST_PATH="libs/$LIB_NAME"
+            
             if [ -d "$SRC_PATH" ]; then
-              # 比较内容而非时间戳
-              if [ -d "$DEST_PATH" ]; then
-                # 使用diff -r比较目录内容
-                if diff -r --brief "$SRC_PATH" "$DEST_PATH" > /dev/null 2>&1; then
-                  echo "✅ 库 '$LIB_NAME' 内容未变化，跳过复制"
-                  continue
-                fi
-              fi
-              echo "🔄 库 '$LIB_NAME' 有变化，更新中..."
               rm -rf "$DEST_PATH"
               cp -r "$SRC_PATH" "$DEST_PATH"
+              echo "✅ 已复制库: $LIB_NAME"
             else
               echo "❌ 错误：源路径不存在: $SRC_PATH"
               exit 1
             fi
           done
+          
           echo "=== 库合并完成 ==="
+
+      # 关键修复：更新akdanmaku模块的构建配置，移除已弃用的选项
+      - name: Fix akdanmaku build configuration
+        working-directory: ./fantasy-bv-source
+        run: |
+          echo "=== 修复akdanmaku模块构建配置 ==="
+          
+          # 检查并修复akdanmaku模块的build.gradle文件
+          if [ -f "akdanmaku/build.gradle" ]; then
+            echo "找到akdanmaku/build.gradle，修复已弃用的选项..."
+            
+            # 移除android.enableBuildCache选项（已弃用）
+            sed -i '/android.enableBuildCache/d' akdanmaku/build.gradle
+            
+            # 检查并更新Android Gradle插件版本（如果需要）
+            if grep -q "com.android.tools.build:gradle:" akdanmaku/build.gradle; then
+              echo "检测到Android Gradle插件，确保版本兼容..."
+              # 这里可以更新插件版本，但先保持原样
+            fi
+            
+            echo "修复后的build.gradle前5行:"
+            head -5 akdanmaku/build.gradle
+          elif [ -f "akdanmaku/build.gradle.kts" ]; then
+            echo "找到akdanmaku/build.gradle.kts，修复已弃用的选项..."
+            sed -i '/android.enableBuildCache/d' akdanmaku/build.gradle.kts
+          else
+            echo "未找到akdanmaku构建文件，跳过修复"
+          fi
+          
+          # 同时修复根项目的gradle.properties，移除已弃用的选项
+          if [ -f "gradle.properties" ]; then
+            echo "更新gradle.properties，移除已弃用的选项..."
+            sed -i '/android.enableBuildCache/d' gradle.properties
+          fi
 
       - name: Set up jdk 21
         uses: actions/setup-java@main
@@ -164,23 +171,24 @@ jobs:
           java-version: ${{ env.JDK_VERSION }}
           distribution: 'temurin'
 
-      # 检查源代码变更（仅在增量构建模式且未强制清理时）
+      # 检查源代码变更（仅在增量构建模式）
       - name: Check source changes for incremental build
         id: check-source-changes
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' }}
+        if: ${{ inputs.incremental_build == 'true' }}
         working-directory: ./fantasy-bv-source
         run: |
           echo "=== 增量构建模式：检查源代码变更 ==="
-          # 确保.incremental目录存在
+          
           mkdir -p .incremental
-          # 计算当前源代码哈希（基于文件内容，忽略时间戳）
-          echo "计算当前源代码内容哈希..."
-          # 创建临时文件列表
+          
+          # 计算当前源代码哈希
+          echo "计算当前源代码哈希..."
+          
+          # 创建临时文件列表（排除构建输出和缓存目录）
           find . -type f \
             \( -name "*.kt" -o -name "*.java" -o -name "*.gradle" -o -name "*.gradle.kts" \
                -o -name "*.xml" -o -name "*.pro" -o -name "*.mk" -o -name "*.txt" \
-               -o -name "*.json" -o -name "*.properties" -o -name "*.aar" -o -name "*.jar" \
-               -o -name "*.so" -o -name "*.cpp" -o -name "*.c" -o -name "*.h" \) \
+               -o -name "*.json" -o -name "*.properties" -o -name "*.aar" -o -name "*.jar" \) \
             -not -path "./.git/*" \
             -not -path "./build/*" \
             -not -path "./.gradle/*" \
@@ -188,23 +196,29 @@ jobs:
             -not -path "./*.apk" \
             -not -path "./keystore.p12" \
             -not -path "./signing.properties" | \
-            sort > .incremental/file_list.txt
-          # 计算每个文件的哈希（只基于内容，忽略时间戳）
-          while IFS= read -r file; do
-            if [ -f "$file" ]; then
-              sha256sum "$file" >> .incremental/file_hashes.txt
-            fi
-          done < .incremental/file_list.txt
-          # 计算总哈希
-          sha256sum .incremental/file_hashes.txt | awk '{print $1}' > .incremental/current_content_hash.txt
+            sort > .incremental/file_list.txt 2>/dev/null || true
+          
+          # 计算文件内容哈希
+          if [ -s .incremental/file_list.txt ]; then
+            while IFS= read -r file; do
+              if [ -f "$file" ]; then
+                sha256sum "$file" 2>/dev/null || true
+              fi
+            done < .incremental/file_list.txt | sha256sum | awk '{print $1}' > .incremental/current_content_hash.txt
+          else
+            echo "empty" > .incremental/current_content_hash.txt
+          fi
+          
           CURRENT_HASH=$(cat .incremental/current_content_hash.txt)
           echo "当前源代码内容哈希: $CURRENT_HASH"
-          # 检查是否有上次构建的哈希
+          
+          # 检查上次构建哈希
           if [ -f ".incremental/previous_content_hash.txt" ]; then
             PREVIOUS_HASH=$(cat .incremental/previous_content_hash.txt)
             echo "上次构建内容哈希: $PREVIOUS_HASH"
+            
             if [ "$CURRENT_HASH" = "$PREVIOUS_HASH" ]; then
-              echo "✅ 源代码内容完全一致，可以跳过完整构建"
+              echo "✅ 源代码内容完全一致，可以跳过构建"
               echo "skip_build=true" >> $GITHUB_OUTPUT
             else
               echo "🔄 源代码内容有变化，需要重新构建"
@@ -214,30 +228,34 @@ jobs:
             echo "📝 首次构建或未找到上次构建哈希"
             echo "skip_build=false" >> $GITHUB_OUTPUT
           fi
+          
           echo "current_content_hash=$CURRENT_HASH" >> $GITHUB_OUTPUT
 
+      # 准备Gradle环境
       - name: Prepare gradle environment
         working-directory: ./fantasy-bv-source
         run: |
           chmod +x ./gradlew
+          echo "Gradle 版本信息:"
           ./gradlew --version
-          # 如果强制清理，则清理本地gradle缓存
-          if [ "${{ inputs.force_clean_build }}" = "true" ]; then
-            echo "清理本地Gradle缓存..."
-            ./gradlew cleanBuildCache --no-daemon || true
-          fi
+          # 显示当前gradle.properties配置
+          echo "=== gradle.properties配置 ==="
+          tail -20 gradle.properties
 
       # 编译 player.tv 模块（条件性）
       - name: Build player.tv module
+        if: ${{ inputs.incremental_build == 'false' || steps.check-source-changes.outputs.skip_build != 'true' }}
         working-directory: ./fantasy-bv-source
         run: |
           echo "=== 编译 player.tv 模块 ==="
-          # 根据构建模式决定是否跳过
-          if [ "${{ inputs.incremental_build }}" = "true" ] && [ "${{ steps.check-source-changes.outputs.skip_build }}" = "true" ]; then
-            echo "跳过player.tv模块构建（增量模式且内容无变化）"
+          
+          # 使用--build-cache启用Gradle构建缓存
+          if [ "${{ inputs.incremental_build }}" = "true" ]; then
+            echo "使用增量构建模式"
+            ./gradlew :player:tv:assembleRelease --no-daemon --build-cache --offline || ./gradlew :player:tv:assembleRelease --no-daemon --build-cache
           else
-            echo "构建player.tv模块..."
-            ./gradlew :player:tv:assembleRelease --no-daemon --build-cache
+            echo "使用完整构建模式"
+            ./gradlew :player:tv:assembleRelease --no-daemon
           fi
 
       - name: Decode keystore.p12 and write signing.properties
@@ -252,16 +270,19 @@ jobs:
           EOF
 
       # 根据构建模式执行构建
-      - name: Build apk based on mode
+      - name: Build APK based on mode
         id: build-apk
         working-directory: ./fantasy-bv-source
         run: |
           echo "=== 开始构建APK ==="
+          
           if [ "${{ inputs.incremental_build }}" = "true" ] && [ "${{ steps.check-source-changes.outputs.skip_build }}" = "true" ]; then
             echo "✅ 增量构建模式：源代码内容无变化"
             echo "尝试复用最近的成功构建..."
-            # 查找最近构建的APK（基于时间戳）
+            
+            # 查找最近构建的APK
             LATEST_APK=$(find . -name "fantasybv-*.apk" -type f -printf "%T@ %p\n" 2>/dev/null | sort -rn | head -1 | cut -d' ' -f2-)
+            
             if [ -n "$LATEST_APK" ] && [ -f "$LATEST_APK" ]; then
               echo "📦 找到最近APK: $(basename "$LATEST_APK")"
               mkdir -p ./app/build/outputs/apk/default/release/
@@ -270,8 +291,9 @@ jobs:
               echo "build_type=reused" >> $GITHUB_OUTPUT
             else
               echo "⚠️ 未找到可用APK，执行快速构建..."
-              # 使用缓存，跳过测试，快速构建
-              ./gradlew :app:assembleRelease --no-daemon --build-cache --offline --rerun-tasks
+              # 使用缓存，快速构建
+              ./gradlew :app:assembleRelease --no-daemon --build-cache --offline --rerun-tasks || \
+              ./gradlew :app:assembleRelease --no-daemon --build-cache
               echo "build_type=fast" >> $GITHUB_OUTPUT
             fi
           else
@@ -286,8 +308,10 @@ jobs:
               echo "build_type=full" >> $GITHUB_OUTPUT
             fi
           fi
+          
           echo ""
           echo "=== 构建完成 ==="
+          
           # 确保APK文件存在并重命名
           if ls ./app/build/outputs/apk/default/release/*.apk 1>/dev/null 2>&1; then
             mv ./app/build/outputs/apk/default/release/*.apk "./app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
@@ -300,14 +324,17 @@ jobs:
 
       # 保存哈希和缓存
       - name: Save content hash for next build
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' && steps.build-apk.outputs.apk_exists == 'true' }}
+        if: ${{ inputs.incremental_build == 'true' && steps.build-apk.outputs.apk_exists == 'true' }}
         working-directory: ./fantasy-bv-source
         run: |
           echo "=== 保存内容哈希供下次构建使用 ==="
+          
           mkdir -p .incremental
+          
           if [ -f ".incremental/current_content_hash.txt" ]; then
             cp .incremental/current_content_hash.txt .incremental/previous_content_hash.txt
             echo "✅ 内容哈希已保存: $(cat .incremental/previous_content_hash.txt)"
+            
             # 保存构建信息
             echo "构建时间: $(date)" > .incremental/build_info.txt
             echo "构建日期: ${{ env.BUILD_DATE }}" >> .incremental/build_info.txt
@@ -315,22 +342,21 @@ jobs:
             echo "提交哈希: ${{ github.sha }}" >> .incremental/build_info.txt
           fi
 
-      # 保存Gradle缓存
+      # 保存Gradle缓存（仅增量构建模式）
       - name: Save Gradle cache
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' }}
+        if: ${{ inputs.incremental_build == 'true' && steps.build-apk.outputs.apk_exists == 'true' }}
         uses: actions/cache/save@main
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
             fantasy-bv-source/.gradle
-            fantasy-bv-source/build-cache
-            fantasy-bv-source/build
+            fantasy-bv-source/.gradle-build-cache
           key: ${{ steps.gradle-cache.outputs.cache-primary-key }}
 
       # 保存源代码内容哈希缓存
       - name: Save source content hash cache
-        if: ${{ inputs.incremental_build == 'true' && inputs.force_clean_build != 'true' && steps.build-apk.outputs.apk_exists == 'true' }}
+        if: ${{ inputs.incremental_build == 'true' && steps.build-apk.outputs.apk_exists == 'true' }}
         uses: actions/cache/save@main
         with:
           path: fantasy-bv-source/.incremental
