--- a/patches/bv_fantasy/ci_gradle.properties
+++ b/patches/bv_fantasy/ci_gradle.properties
@@ -29,17 +29,13 @@ systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.inter
 systemProp.javax.xml.parsers.DocumentBuilderFactory=com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
 
 # 配置Gradle以内容哈希为基础
-# 构建缓存配置 - 基于内容哈希而非时间戳
+# Gradle构建配置
 org.gradle.caching=true
-org.gradle.caching.debug=false
+org.gradle.parallel=true
+org.gradle.daemon=false
+org.gradle.configureondemand=true
+
 # Kotlin增量编译
 kotlin.incremental=true
 kotlin.incremental.js=true
 kotlin.incremental.jvm=true
-kotlin.compiler.execution.strategy=in-process
-# Android构建缓存
-android.enableBuildCache=true
-android.buildCacheDir=build-cache
-# 任务输出缓存
-org.gradle.console=verbose
-org.gradle.parallel=true
